[package]
name = "image_processing"
version = "0.1.0"
authors = ["pi"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[profile.release]
debug = true

[features]
perf = []

[dependencies]
image = "0.23.7"
imageproc = "0.21.0"
hamming = "0.1.0"
nalgebra = "*"
num = "0.3.0"
more-asserts = "0.2.1"
rand = "0.7.3"
itertools = "0.10.0"
hamming_lsh = { path = "../hamming_lsh" }
